Fix alignment of the task description

--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ input[type="text"],
 label {
   border: none;
   outline: none;
-  width: 85%;
+  width: 90%;
   cursor: pointer;
 }
 
